@@ -1,5 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
-	<file>appicon.png</file>
+	<file>icons/appicon.png</file>
+	<file>icons/prev.png</file>
+	<file>icons/next.png</file>
 </qresource>
 </RCC>
