@@ -2,6 +2,10 @@
 
 	* src/viewpoint_selector.cpp, src/channel_selector.cpp: Update and add
 	keyboard shortcuts.
+	* src/cvlview.h, src/cvlview.cpp, src/dataset_selector.h,
+	src/dataset_selector.cpp, src/Makefile.am, src/cvlview.qrc, src/icons,
+	src/icons/prev.png, src/icons/next.png: Move data set switching to
+	toolbar buttons.
 
 2007-10-16  Martin Lambers <marlam@marlam.de>
 
